# voice-agent-testing-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  call_me_test.py  main.py  pyproject.toml  run_suite.py  scenarios.py
Docs/: SCENARIOS.md
Docs/superpowers/specs/: 2026-06-25-auto-eval-harness-design.md
