[project]
name = "voice-agent-testing-bot"
version = "0.1.0"
description = "Voice Bot testing via another voice bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "twilio>=9.10.9",
    "websockets>=16.0",
]
